--- a/pages/testAPI.html
+++ b/pages/testAPI.html
@@ -1,19 +1,19 @@
 <html>
 <body>
 {
-  "name": "World Register of Marine Species",
-  "identifierSpace": "urn:lsid:marinespecies.org:taxname:",
-  "schemaSpace": "http:\/\/rdf.freebase.com\/ns\/type.object.id",
-  "view": {
-    "url": "http:\/\/www.marinespecies.org\/aphia.php?p=taxdetails&id={{id}}"
-},
-"defaultTypes": [
-  {
-    "id": "\/biology\/organism_classification\/scientific_name",
-    "name": "Scientific name"
-    }
-  ]
-}
+  "name": "World Register of Marine Species",<br>
+  "identifierSpace": "urn:lsid:marinespecies.org:taxname:",<br>
+  "schemaSpace": "http:\/\/rdf.freebase.com\/ns\/type.object.id",<br>
+  "view": {<br>
+    "url": "http:\/\/www.marinespecies.org\/aphia.php?p=taxdetails&id={{id}}"<br>
+},<br>
+"defaultTypes": [<br>
+  {<br>
+    "id": "\/biology\/organism_classification\/scientific_name",<br>
+    "name": "Scientific name"<br>
+    }<br>
+  ]<br>
+}<br>
 </body>
 </html>
 
