--- a/pages/testAPI.html
+++ b/pages/testAPI.html
@@ -1,19 +1,19 @@
 <html>
 <body>
 {
-  "name": "World Register of Marine Species",<br>
-  "identifierSpace": "urn:lsid:marinespecies.org:taxname:",<br>
-  "schemaSpace": "http:\/\/rdf.freebase.com\/ns\/type.object.id",<br>
-  "view": {<br>
-    "url": "http:\/\/www.marinespecies.org\/aphia.php?p=taxdetails&id={{id}}"<br>
-},<br>
-"defaultTypes": [<br>
-  {<br>
-    "id": "\/biology\/organism_classification\/scientific_name",<br>
-    "name": "Scientific name"<br>
-    }<br>
-  ]<br>
-}<br>
+  <p>"name": "World Register of Marine Species",<br>
+  <p>"identifierSpace": "urn:lsid:marinespecies.org:taxname:",<br>
+  <p>"schemaSpace": "http:\/\/rdf.freebase.com\/ns\/type.object.id",<br>
+  <p>"view": {<br>
+    <p>"url": "http:\/\/www.marinespecies.org\/aphia.php?p=taxdetails&id={{id}}"<br>
+<p>},<br>
+<p>"defaultTypes": [<br>
+  <p>{<br>
+    <p>"id": "\/biology\/organism_classification\/scientific_name",<br>
+    <p>"name": "Scientific name"<br>
+    <p>}<br>
+  <p>]<br>
+<p>}<br>
 </body>
 </html>
 
