--- a/pages/testAPI.html
+++ b/pages/testAPI.html
@@ -1,19 +1,19 @@
 <html>
 <body>
 {
-  <p>"name": "World Register of Marine Species",<br>
-  <p>"identifierSpace": "urn:lsid:marinespecies.org:taxname:",<br>
-  <p>"schemaSpace": "http:\/\/rdf.freebase.com\/ns\/type.object.id",<br>
-  <p>"view": {<br>
-    <p>"url": "http:\/\/www.marinespecies.org\/aphia.php?p=taxdetails&id={{id}}"<br>
-<p>},<br>
-<p>"defaultTypes": [<br>
-  <p>{<br>
-    <p>"id": "\/biology\/organism_classification\/scientific_name",<br>
-    <p>"name": "Scientific name"<br>
-    <p>}<br>
-  <p>]<br>
-<p>}<br>
+  <p>"name": "World Register of Marine Species",</p>
+  <p>"identifierSpace": "urn:lsid:marinespecies.org:taxname:",</p>
+  <p>"schemaSpace": "http:\/\/rdf.freebase.com\/ns\/type.object.id",</p>
+  <p>"view": {</p>
+    <p>"url": "http:\/\/www.marinespecies.org\/aphia.php?p=taxdetails&id={{id}}"</p>
+<p>},</p>
+<p>"defaultTypes": [</p>
+  <p>{</p>
+    <p>"id": "\/biology\/organism_classification\/scientific_name",</p>
+    <p>"name": "Scientific name"</p>
+    <p>}</p>
+  <p>]</p>
+<p>}</p>
 </body>
 </html>
 
