--- a/alex.html
+++ b/alex.html
@@ -102,5 +102,5 @@
 										<br>
 
 									<h3>Teaching</h3>
-									<b> Alex please add courses here :) </b>
+									<b> Alex please add courses here :) Thank you! </b>
 </html>
