adding new content

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="research.html">Research</a>
 							<ul>
-								<li><a href="macro.html">Macroevolution</a></li>
+								<li><a href="macro.html">Macroevolution and Phylogenomics</a></li>
 								<li><a href="comp.html">Computational Epidemiology</a></li>
-								<li><a href="phylo.html">Phylogenomics</a></li>
 								<li><a href="immuno.html">Immunogenetics</a></li>
 							</ul>
 						</li>
@@ -53,7 +52,9 @@
 								<center><div class="header">
 								<header>
 									<h2>Welcome to the Evolutionary Informatics Lab</h2>
-									<p> Our lab does super cool research and the purpose of this site is to share it with you --- Alex please edit :) </p>
+									<h3>PI Alex Dornburg</h3>
+									<h2>PLEASE NOTE THIS SITE WILL BE PARTIALLY DOWN 3.11-3.18 for upgrades</h2>
+									<p> Our lab integrates tools from genomics, bioinformatics, immunogenetics, and evolutionary biology to provide the basis for forecasting changes in biodiversity as well as unknown aspects of emergent diseases. This work empowers us to effectively respond to global threats to human health and be better stewards of our planet </p>
 								</header>
 								</center>
 								<br>
@@ -65,13 +66,12 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/PICT0015.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Macroevolution</h2>
-							<p>Some text here</p>
 						</header>
-						<p> Some more text here </p>
+						<p> As we move into the 21st century, it is becoming apparent that learning about the past can critically aid us in facing emergent challenges to biodiversity. </p><p>Given the rapid pace of global change devloping this understanding now is fundamentally important if we want to accurately forecast how biodiversity will be impacted by factors ranging from species invasion, ocean acidification, development, and rising temperatures. </p> <p>Learn about our own work concerning the evolution of biodiversity and global change and how these relate to the findings from the research efforts of our friends and colleagues here!</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -79,8 +79,24 @@
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
 
+				<!-- Three -->
+						<section id="three" class="spotlight style3 left">
+							<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+							<div class="content">
+								<header>
+									<h2>Immunogenetics</h2>
+									<p>Some text here</p>
+								</header>
+								<p> Some more text here </p>
+								<ul class="actions">
+									<li><a href="#" class="button">Learn More</a></li>
+								</ul>
+							</div>
+							<a href="#four" class="goto-next scrolly">Next</a>
+						</section>
+
 			<!-- Three -->
-				<section id="three" class="spotlight style3 left">
+				<section id="three" class="spotlight style2 right">
 					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
 						<header>
@@ -96,7 +112,7 @@
 				</section>
 
 				<!-- Two -->
-					<section id="two" class="spotlight style2 right">
+					<section id="two" class="spotlight style3 left">
 						<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 						<div class="content">
 							<header>
@@ -111,21 +127,7 @@
 						<a href="#three" class="goto-next scrolly">Next</a>
 					</section>
 
-					<!-- Three -->
-						<section id="three" class="spotlight style3 left">
-							<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
-							<div class="content">
-								<header>
-									<h2>Immunogenetics</h2>
-									<p>Some text here</p>
-								</header>
-								<p> Some more text here </p>
-								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
-								</ul>
-							</div>
-							<a href="#four" class="goto-next scrolly">Next</a>
-						</section>
+					
 
 			<!-- Four -->
 				<section id="four" class="wrapper style1 special fade-up">
