software page update
new main software landing page

--- a/software.html
+++ b/software.html
@@ -56,25 +56,37 @@
 
 						<!-- Content -->
 							<section id="content">
-								<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-								<h3>TOAST: Transcriptome Ortholog Alignment Tools </h3>
-								<p> We introduce TOAST, open source software designed to help you use BUSCO to effectively harness
-									public data, visualize missing data patterns, and assemble multiple sequence alignments.TOAST can
-									 be downloaded here and requires R.</p>
-								<p>Note that BUSCO is limited to UNIX systems (Mac and Linux), so you can only use the download and
-									sequence extraction functions relying on BUSCO in Unix (Mac and Linux) systems. Missing data visualizations
-									will work on all platforms.</p>
-								<p>You can use TOAST to visualize missing data patterns or assemble alignments on any platform..</p>
-
-
 								<h3>phyinformR: phylogenetic experimental design and data exploration in R</h3>
-								<p>We introduce PhyInformR, an open source software package that facilitates rapid calculation
-									of phylogenetic informativeness and several novel related assessments of the phylogenetic utility
-									of any given dataset or dataset partition. By facilitating computation on user hardware, PhyInformR
-									increases the potential power users can apply toward screening datasets for phylogenetic information
-									content by orders of magnitude. PhyInformR also features expanded functionality compared to current
-									resources, providing new tools for data visualization and routines optimized for rapid statistical
-									calculations using parallel processing.</p>
+								<p><span class="image left"><img src="images/PhyinformRCover.png" alt="" /></span> PhyInformR is an open source software package that facilitates rapid calculation of phylogenetic informativeness and several novel related assessments of the phylogenetic utility of any given dataset or dataset partition. </p><p>By facilitating computation on user hardware, PhyInformR increases the potential power users can apply toward screening datasets for phylogenetic information content by orders of magnitude. </p><p>PhyInformR also features expanded functionality compared to current resources, providing new tools for data visualization and routines optimized for rapid statistical calculations using parallel processing.</p>
+								<div class="col-6 col-12-xsmall">
+										<ul class="actions fit small">
+											<li><a href="#" class="button primary fit small">PhyinormR Walkthrough</a></li>
+										</ul>
+									</div>
+								<p></p>
+								<br></br>
+								<h3>TOAST: Transcriptome Ortholog Alignment Tools </h3>
+								<p><span class="image left"><img src="images/TOAST_Manual_cover.png" alt="" /></span> TOAST is an open source software designed to help you effectively harness public data, visualize missing data patterns, and assemble multiple sequence alignments.TOAST can be downloaded here and requires R. </p><p>TOAST is continually updated to include utility functions that make data parsing easier and circumvent the use of multiple software steps in informatic pipelines. TOAST can generate output that can be fed directly into IQTREE and has numerous functions for analyzing missing data and subsetting massive sequence datasets</p>
+								<div class="col-6 col-12-xsmall">
+										<ul class="actions fit small">
+											<li><a href="#" class="button primary fit small">TOAST Walkthrough</a></li>
+										</ul>
+									</div>
+								<br></br>
+								<h3>Additional Scripts </h3>
+								<p><span class="image left"><img src="images/toadfish3.png" alt="" /></span> Here we provide an overview of custom scripts that were created in the course of our projects  with a detailed tutorial and additional content</p><p>This archive will be updated periodically as new work is published. Each tutorial will provide links to the corresponding data files allowing you to replicate our results while learning new techinques </p>
+								<p> Please check back periodically for new updates!</p>
+								<div class="col-6 col-12-xsmall">
+										<ul class="actions fit small">
+											<li><a href="#" class="button primary fit small">See Archive</a></li>
+										</ul>
+									</div>
+								<p></p>
+								<br></br>
+
+
+								
+								
 
 							</section>
 
