--- a/software.html
+++ b/software.html
@@ -74,7 +74,7 @@
 									</div>
 								<br></br>
 								<h3>Additional Scripts </h3>
-								<p><span class="image left"><img src="images/toadfish3.png" alt="" /></span> Here we provide an overview of custom scripts that were created in the course of our projects  with a detailed tutorial and additional content</p><p>This archive will be updated periodically as new work is published. Each tutorial will provide links to the corresponding data files allowing you to replicate our results while learning new techinques </p>
+								<p><span class="image left"><img src="images/toadfish3.png" alt="" /></span> Here we provide an overview of custom scripts that were created in the course of our projects  with a detailed tutorial and additional content</p><p>This archive will be updated as new work is published with tutorials that provide links to the corresponding data files allowing you to replicate our results while learning new techniques </p>
 								<p> Please check back periodically for new updates!</p>
 								<div class="col-6 col-12-xsmall">
 										<ul class="actions fit small">
