--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
 							<div class="content">
 								<header>
 									<h2>Immunogenetics</h2>
-									<p>Some text here</p>
 								</header>
-								<p> Some more text here </p>
+								<p> Our ability to ward off infection hinges on the ability to  differentiate normal cells (self) from pathogens and infected cells (non-self). This ability is a hallmark of vertebrate immunity and up to one fifth of the vertebrate genome is comprised of immunologically related genes that collectively encode numerous families of receptors.</p> <p>However, the genetic diversity of these families is highly heterogeneous. The individual genes that make up a family may vary in both number and rates of molecular evolution. Some of these gene families are present as clusters on a chromosome, while others are comprised of individual genes dispersed throughout the genome.</p> <p> Our goal is to understand the mechanisms and functional consequences of immune gene evolution </p>
 								<ul class="actions">
 									<li><a href="#" class="button">Learn More</a></li>
 								</ul>
