--- a/software.html
+++ b/software.html
@@ -60,13 +60,13 @@
 								<p><span class="image left"><img src="images/PhyinformRCover.png" alt="" /></span> PhyInformR is an open source software package that facilitates rapid calculation of phylogenetic informativeness and several novel related assessments of the phylogenetic utility of any given dataset or dataset partition. </p><p>By facilitating computation on user hardware, PhyInformR increases the potential power users can apply toward screening datasets for phylogenetic information content by orders of magnitude. </p><p>PhyInformR also features expanded functionality compared to current resources, providing new tools for data visualization and routines optimized for rapid statistical calculations using parallel processing.</p>
 								<div class="col-6 col-12-xsmall">
 										<ul class="actions fit small">
-											<li><a href="#" class="button primary fit small">PhyinormR Walkthrough</a></li>
+											<li><a href="#" class="button primary fit small">PhyinformR Walkthrough</a></li>
 										</ul>
 									</div>
 								<p></p>
 								<br></br>
 								<h3>TOAST: Transcriptome Ortholog Alignment Tools </h3>
-								<p><span class="image left"><img src="images/TOAST_Manual_cover.png" alt="" /></span> TOAST is an open source software designed to help you effectively harness public data, visualize missing data patterns, and assemble multiple sequence alignments.TOAST can be downloaded here and requires R. </p><p>TOAST is continually updated to include utility functions that make data parsing easier and circumvent the use of multiple software steps in informatic pipelines. TOAST can generate output that can be fed directly into IQTREE and has numerous functions for analyzing missing data and subsetting massive sequence datasets</p>
+								<p><span class="image left"><img src="images/TOAST_Manual_cover.png" alt="" /></span> TOAST is an open source R package designed to help you effectively harness public data, visualize missing data patterns, and assemble multiple sequence alignments.TOAST can be downloaded here and requires R. </p><p>TOAST is continually updated to include utility functions that make data parsing easier and circumvent the use of multiple software steps in informatic pipelines. TOAST can generate output that can be fed directly into IQTREE and has numerous functions for analyzing missing data and subsetting massive sequence datasets</p>
 								<div class="col-6 col-12-xsmall">
 										<ul class="actions fit small">
 											<li><a href="#" class="button primary fit small">TOAST Walkthrough</a></li>
@@ -74,7 +74,7 @@
 									</div>
 								<br></br>
 								<h3>Additional Scripts </h3>
-								<p><span class="image left"><img src="images/toadfish3.png" alt="" /></span> Here we provide an overview of custom scripts that were created in the course of our projects  with a detailed tutorial and additional content</p><p>This archive will be updated as new work is published with tutorials that provide links to the corresponding data files allowing you to replicate our results while learning new techniques </p>
+								<p><span class="image left"><img src="images/toadfish3.png" alt="" /></span> Here we provide an overview of custom scripts that were created in the course of our projects  with detailed tutorials and additional content</p><p>This archive will be updated as new work is published and provide links to the corresponding data files allowing you to replicate our results while learning new techniques </p>
 								<p> Please check back periodically for new updates!</p>
 								<div class="col-6 col-12-xsmall">
 										<ul class="actions fit small">
