pub link update

--- a/software.html
+++ b/software.html
@@ -56,7 +56,7 @@
 
 						<!-- Content -->
 							<section id="content">
-								<h3>phyinformR: phylogenetic experimental design and data exploration in R</h3>
+								<h3>phyinformR: Phylogenetic experimental design and data exploration in R</h3>
 								<p><span class="image left"><img src="images/PhyinformRCover.png" alt="" /></span> PhyInformR is an open source software package that facilitates rapid calculation of phylogenetic informativeness and several novel related assessments of the phylogenetic utility of any given dataset or dataset partition. </p><p>By facilitating computation on user hardware, PhyInformR increases the potential power users can apply toward screening datasets for phylogenetic information content by orders of magnitude. </p><p>PhyInformR also features expanded functionality compared to current resources, providing new tools for data visualization and routines optimized for rapid statistical calculations using parallel processing.</p>
 								<div class="col-6 col-12-xsmall">
 										<ul class="actions fit small">
