--- a/publications.html
+++ b/publications.html
@@ -64,6 +64,14 @@
 													Near, T. J., & Frédérich, B. (2022). Considering decoupled phenotypic diversification between ontogenetic
 													phases in macroevolution: An example using Triggerfishes (Balistidae). In bioRxiv (p. 2022.01.11.475856).
 													<b><a href="/pubs/Dornburg2022.pdf">PDF</a></b></li>
+
+											<li>Ghezelayagh, A., Harrington, R. C., Burress, E. D., Campbell, M. A., Buckner, J. C., Chakrabarty, P., Glass, J. R., Tyler McCraney,
+												W., Unmack, P. J., Thacker, C. E., Alfaro, M. E., Friedman, S. T., Ludt, W. B., Cowman, P. F., Friedman, M., Price, S. A., Dornburg,
+											 	A., Faircloth, B. C., Wainwright, P. C., & Near, T. J. (2021). Prolonged morphological expansion of spiny-rayed fishes following
+												the end-Cretaceous. In bioRxiv; accepted Nature Ecology & Evolution.
+												<b><a href="https://www.biorxiv.org/content/10.1101/2021.07.12.452083v1">PDF</a></b></li>
+
+											<li>Carlson, K.B., Wcisel, D.J, Ackerman,H.D., Romanet, J., Christiansen, E.F., Niemuth, J.N., Williams, C., Breen, M., Stoskopf, M., Dornburg, A, and Yoder, J.A., Transcriptome annotation reveals minimal immunogenetic diversity among Wyoming toads, Anaxyrus baxteri. Research Square; Submitted to Conservation Genetics<b><a href="https://assets.researchsquare.com/files/rs-1265947/v1/effd5c7e-592f-4170-9f1c-bc9b0dbfbb67.pdf?c=1644939558">PDF</a></b></li>
 									</ul>
 
 								<h3>Publications</h3>
@@ -71,80 +79,67 @@
 										<ul>
 											<li> Fisk, J. N., Mahal, A. R., Dornburg, A., Gaffney, S. G., Aneja, S., Contessa, J. N., Rimm, D., Yu, J. B.,
 												& Townsend, J. P. (2022). Premetastatic shifts of endogenous and exogenous mutational processes support consolidative
-												therapy in EGFR-driven lung adenocarcinoma. Cancer Letters, 526, 346–351.
+												therapy in EGFR-driven lung adenocarcinoma. <i>Cancer Letters</i>, 526, 346–351.
 												<b><a href="/pubs/Fisk2022.pdf">PDF</a></b></li>
 
 											<li>Dornburg, A., & Yoder, J. A. (2022). On the relationship between extant innate immune receptors and the evolutionary
-												origins of jawed vertebrate adaptive immunity. Immunogenetics, 74(1), 111–128.
+												origins of jawed vertebrate adaptive immunity. <i>Immunogenetics</i>, 74(1), 111–128.
 												<b><a href="/pubs/Dornburg2022.pdf">PDF</a></b></li>
 
 											<li>Parker, E., Dornburg, A., Struthers, C. D., Jones, C. D., & Near, T. J. (2021). Phylogenomic species delimitation
-												dramatically reduces species diversity in an Antarctic adaptive radiation. Systematic Biology.
+												dramatically reduces species diversity in an Antarctic adaptive radiation. <i>Systematic Biology</i>.
 												<b><a href="/pubs/Parker2022.pdf">PDF</a></b></li>
 										</ul>
 
 									<h4>2021</h4>
 										<ul>
+											<li>Townsend, J. P., Hassler, H. B., Wang, Z., Miura, S., Singh, J., Kumar, S., Ruddle, N. H., Galvani, A. P., & Dornburg,
+												A. (2021). The durability of immunity against reinfection by SARS-CoV-2: a comparative evolutionary study. <i>The Lancet Microbe</i>, 
+												2(12), e666–e675.
+												<b><a href="https://www.thelancet.com/journals/lanmic/article/PIIS2666-5247(21)00219-6/fulltext">PDF</a></b></li>
+
 											<li> Lamb, A. D., Lippi, C. A., Watkins-Colwell, G. J., Jones, A., Warren, D. L., Iglesias, T. L., Brandley, M. C., &
 												Dornburg, A. (2021). Comparing the dietary niche overlap and ecomorphological differences between invasive Hemidactylus
-												mabouia geckos and a native gecko competitor. Ecology and Evolution, 11(24), 18719–18732.
-												<b><a href="#">PDF</a></b></li>
+												mabouia geckos and a native gecko competitor. <i>Ecology and Evolution</i>, 11(24), 18719–18732.
+												<b><a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.8401">PDF</a></b></li>
 
  											<li>Dornburg, A., Ota, T., Criscitiello, M. F., Salinas, I., Sunyer, J. O., Magadán, S., Boudinot, P., Xu, Z., Flajnik,
 											M. F., Singer, A., Gambón-Deza, F., Hansen, J. D., & Yoder, J. A. (2021). From IgZ to IgT: A Call for a Common Nomenclature
-											 for Immunoglobulin Heavy Chain Genes of Ray-Finned Fish. Zebrafish, 18(6), 343–345.
-												<b><a href="#">PDF</a></b></li>
-
-											<li>Townsend, J. P., Hassler, H. B., Wang, Z., Miura, S., Singh, J., Kumar, S., Ruddle, N. H., Galvani, A. P., & Dornburg,
-												A. (2021). The durability of immunity against reinfection by SARS-CoV-2: a comparative evolutionary study. The Lancet Microbe, 
-												2(12), e666–e675.
+											 for Immunoglobulin Heavy Chain Genes of Ray-Finned Fish. <i>Zebrafish</i>, 18(6), 343–345.
 												<b><a href="#">PDF</a></b></li>
 
 											<li>Dornburg, A., Wcisel, D. J., Zapfe, K., Ferraro, E., Roupe-Abrams, L., Thompson, A. W., Braasch, I., Ota, T., & Yoder, J. A.
 												 (2021). Holosteans contextualize the role of the teleost genome duplication in promoting the rise of evolutionary novelties
-												 in the ray-finned fish innate immune system. Immunogenetics, 73(6), 479–497.
+												 in the ray-finned fish innate immune system.<i> Immunogenetics</i>, 73(6), 479–497.
 												 <b><a href="#">PDF</a></b></li>
 
 											<li> Dornburg, A., & Near, T. J. (2021). The Emerging Phylogenetic Perspective on the Evolution of Actinopterygian Fishes. 
-												Annual Review of Ecology, Evolution, and Systematics.
+												<i>Annual Review of Ecology, Evolution, and Systematics</i>.
 												<b><a href="#">PDF</a></b></li>
 
 											<li> Thompson, A.W., Hawkins, M.B., Parey, E. et al. The bowfin genome illuminates the developmental evolution of ray-finned
-												fishes. Nat Genet 53, 1373–1384 (2021).
-												<b><a href="#">PDF</a></b></li>
+												fishes. <i>Nature Genetics</i> 53, 1373–1384 (2021).
+												<b><a href="https://www.nature.com/articles/s41588-021-00914-y">PDF</a></b></li>
+
+											<li>Sigler, K. Warren, D., Tracy,B., Forrestel, E., Hogue, G., Dornburg, A. Assessing bias in aggregated historical spatial data: A case study of North Carolina’s freshwater fishes. <i>Ecosphere</i>, 10.1002/ ecs2.3878, 12, 12,<b><a href="https://esajournals.onlinelibrary.wiley.com/doi/pdfdirect/10.1002/ecs2.3878">PDF</a></b></li>
 
 											<li>Warren, D. L., Eytan, R. I., Dornburg, A., Iglesias, T. L., Brandley, M. C., & Wainwright, P. C. (2021). Reevaluating
-												 claims of ecological speciation in Halichoeres bivittatus. Ecology and Evolution, 11(16), 11449–11456.
-												 <b><a href="#">PDF</a></b></li>
-
-											<li>Yoder, J. A., Wcisel, D. J., McConnell, S., Hernandez, K. M., Andrade, J., de Jong, J. L. O., Litman, G. W., &
-												Dornburg, A. (2021). A highly diverse set of novel immunoglobulin-like transcript (NILT) genes in zebrafish indicates
-												a wide range of functions. The Journal of Immunology, 206(1 Supplement), 19.11–19.11.
-											<b><a href="#">PDF</a></b></li></li>
+												 claims of ecological speciation in Halichoeres bivittatus. <i>Ecology and Evolution</i>, 11(16), 11449–11456.
+												 <b><a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.7936">PDF</a></b></li>
 
 											<li>Warren, D. L., Dornburg, A., Zapfe, K., & Iglesias, T. L. (2021). The effects of climate change on Australia’s only
-												endemic Pokémon: Measuring bias in species distribution models. Methods in Ecology and Evolution / British Ecological Society, 
+												endemic Pokémon: Measuring bias in species distribution models. <i>Methods in Ecology and Evolution </i>, 
 												12(6), 985–995.
-												<b><a href="#">PDF</a></b></li>
-
-											<li>Ghezelayagh, A., Harrington, R. C., Burress, E. D., Campbell, M. A., Buckner, J. C., Chakrabarty, P., Glass, J. R., Tyler McCraney,
-												W., Unmack, P. J., Thacker, C. E., Alfaro, M. E., Friedman, S. T., Ludt, W. B., Cowman, P. F., Friedman, M., Price, S. A., Dornburg,
-											 	A., Faircloth, B. C., Wainwright, P. C., & Near, T. J. (2021). Prolonged morphological expansion of spiny-rayed fishes following
-												the end-Cretaceous. In bioRxiv (p. 2021.07.12.452083).
-												<b><a href="#">PDF</a></b></li>
-
-											<li>Nicholas Fisk, J., Mahal, A. R., Dornburg, A., Gaffney, S. G., Aneja, S., Contessa, J. N., Rimm, D., Yu, J. B., & Townsend, J. P.
-												(2021). Clinically relevant shifts in endogenous and exogenous mutational processes proximate to metastasis support local consolidative
-												treatment in EGFR-driven non-small cell lung cancer. medRxiv, 2021.05.04.21256425.
-												<b><a href="#">PDF</a></b></li>
+												<b><a href="https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/2041-210X.13591">PDF</a></b></li>
 
 											<li>Dornburg, A., Wang, Z., Wang, J., Mo, E. S., López-Giráldez, F., & Townsend, J. P. (2021). Comparative Genomics within and across
-												Bilaterians Illuminates the Evolutionary History of ALK and LTK Proto-Oncogene Origination and Diversification. Genome Biology and
-												Evolution, 13(1).
-												<b><a href="#">PDF</a></b></li>
+												Bilaterians Illuminates the Evolutionary History of ALK and LTK Proto-Oncogene Origination and Diversification. <i>Genome Biology and
+												Evolution</i>, 13(1).
+												<b><a href="https://academic.oup.com/gbe/article/13/1/evaa228/5983394">PDF</a></b></li>
 										</ul>
 
 										<h4>2020</h4>
+										<p>Under construction</p>
 											<ul>
 
 
