--- a/alex.html
+++ b/alex.html
@@ -85,22 +85,20 @@
 
 									<h3>Contact</h3>
 									<b>Office:</b> Bioinformatics 357 <br>
-									<b>Phone:</b> 704-687-8437 <br>
-									<b>Email:</b> adornbur@uncc.edu <br>
+									<b>Email:</b> adornbur AT uncc.edu <br>
 									<br>
 									<br>
 
 									<h3>Education</h3>
 										<ul>
 											<li><b>2008—2014</b> Ph.D. Ecology and Evolutionary Biology, Yale University,
-													New Haven, CT. Advisor: Dr. Thomas J. Near</li>
+													New Haven, CT.</li>
 											<li><b>2008—2010</b> M.S. Ecology and Evolutionary Biology, Yale University,
-													New Haven, CT. Advisor: Dr. Thomas J. Near</li>
-											<li><b>2005—2008</b> B.S. Zoology, Washington State University, Pullman, WA. Advisor:
-													Dr. Michael Alfaro</li>
+													New Haven, CT.</li>
+											<li><b>2005—2008</b> B.S. Zoology, Washington State University, Pullman, WA.</li>
 										</ul>
 										<br>
 
 									<h3>Teaching</h3>
-									<b> Alex please add courses here :) Thank you! </b>
+									<li><b>BINF 3121</b> Statistics for Bioinformatics </li>
 </html>
