--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						</section>
 
 			<!-- Three -->
-				<section id="three" class="spotlight style2 right">
+				<section id="four" class="spotlight style2 right">
 					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
 						<header>
@@ -107,11 +107,11 @@
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
 					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
+					<a href="#five" class="goto-next scrolly">Next</a>
 				</section>
 
 				<!-- Two -->
-					<section id="two" class="spotlight style3 left">
+					<section id="five" class="spotlight style3 left">
 						<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 						<div class="content">
 							<header>
@@ -123,13 +123,13 @@
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
-						<a href="#three" class="goto-next scrolly">Next</a>
+						<a href="#six" class="goto-next scrolly">Next</a>
 					</section>
 
 					
 
 			<!-- Four -->
-				<section id="four" class="wrapper style1 special fade-up">
+				<section id="six" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
 							<h2>I like this section template, but not sure what I want to put here yet</h2>
