--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							<a href="#four" class="goto-next scrolly">Next</a>
 						</section>
 
-			<!-- Three -->
+			<!-- Four -->
 				<section id="four" class="spotlight style2 right">
 					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
@@ -110,7 +110,7 @@
 					<a href="#five" class="goto-next scrolly">Next</a>
 				</section>
 
-				<!-- Two -->
+				<!-- Five -->
 					<section id="five" class="spotlight style3 left">
 						<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 						<div class="content">
@@ -128,11 +128,11 @@
 
 					
 
-			<!-- Four -->
+			<!-- Six -->
 				<section id="six" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>I like this section template, but not sure what I want to put here yet</h2>
+							<h2>I like this section template, it will get content soon</h2>
 						</header>
 						<div class="box alt">
 							<div class="row gtr-uniform">
@@ -147,9 +147,9 @@
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<a href="https://evil49.github.io/"  class="icon solid alt major fa-flask"></a>
+									<h3><a href="https://evil49.github.io/"><b>Lab protocols</b></a></h3>
+									<p>For lab members, protocols and tutorials are here</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-paper-plane"></span>
@@ -171,8 +171,8 @@
 					</div>
 				</section>
 
-			<!-- Five -->
-				<section id="five" class="wrapper style2 special fade">
+			<!-- Seven -->
+				<section id="seven" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
 							<h2>Feel free to reach out!</h2>
