--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="research.html">Research</a>
 							<ul>
-								<li><a href="macro.html">Macroevolution and Phylogenomics</a></li>
+								<li><a href="macro.html">Macroevolution</a></li>
+								<li><a href="phylo.html">Phylogenomics</a></li>
 								<li><a href="comp.html">Computational Epidemiology</a></li>
 								<li><a href="immuno.html">Immunogenetics</a></li>
 							</ul>
