--- a/immuno.html
+++ b/immuno.html
@@ -49,7 +49,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Immunogenetics</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<p>A comparative perspective on our immune systems</p>
 						</header>
 						<div class="row gtr-150">
 							<div class="col-8 col-12-medium">
@@ -57,17 +57,21 @@
 								<!-- Content -->
 									<section id="content">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-										<h3>Dolore Amet Consequat</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-										<h3>Sed Magna Ornare</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
+										<h3>Clustered Gene Families</h3>
+										<p>A pervasive feature of the vertebrate immune system is the successive duplication of tandem genes. These duplication events have led to the existence of clustered gene families of immune receptors that display disproportionately high levels of genetic variation relative to surrounding regions. The existence of multiple, highly diverse immune receptor genes provides clear benefits against the threat of infectious diseases. However, these clusters often have different numbers of genes, and/or families of genes that are unidentifiable or nonfunctional between evolutionarily divergent model species.</p> 
+
+										<h3>Fish as models</h3>
+										<p>We share 70 percent of our genes with fish and several fish species are already used as model systems, including zebrafish, sticklebacks, and medaka. Advances in functional genomics now allow us to test how clustered genes contribute to everything from behavior to disease. However, translating work in fishes to humans is challenged by the fact that all of these model species contain a duplicated genome. </p>
+										<p>This genome duplication is a major problem that makes relating genetic mechanisms between humans and fish especially difficult. So how do we bridge the genetic gap between model fish and humans? Fortunately, two species of fish that reside in the waters of North America are turning out to be the missing rosetta stone we need to translate work between model fishes to humans – gar and bowfin.</p>
+										<h3>Darwin's Living Fossils</h3>
+										<p>Referred to by Darwin as living fossils, both gar and bowfin are ancient fish lineages that do not possess a duplicated genome. Instead they contain a mix of genes that sometimes more closely resemble those in humans or chicken rather than fish! <p>Working closely with <a href='http://www4.ncsu.edu/~jayoder/'> Jeff Yoder </a> at the NC State Veterinary School a major aspect of our comparative immunogenetic work is empowered by investigating genes relevant to human immune function also shared by these species. Our goal is to understand the functional consequences of gene duplications in these clusters, and ultimately develop an understanding of how this genetic diversity contributes to organismal health and disease</p>
+										<h3>Current Research Initiatives</h3>
 										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
+											<li>The diversification of innate immune receptors in vertebrates</li>
+											<li>CD300s as a model of clustered gene family evolution</li>
+											<li>Assessing population-level immunogenetic variation</li>
+											<li>The immunome of Antarctic fishes</li>
+											<li>A comparative perspective of immune receptor diversity in marine fish</li>
 										</ul>
 									</section>
 
@@ -77,7 +81,7 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-											<h3>Magna Feugiat</h3>
+											<h3>Insights from Bowfin</h3>
 											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
 											<footer>
 												<ul class="actions">
