--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								</header>
 								<p> Our ability to ward off infection hinges on the ability to differentiate normal cells (self) from pathogens and infected cells (non-self). This ability is a hallmark of vertebrate immunity and up to one fifth of the vertebrate genome is comprised of immunologically related gene families</p> <p>However, the genetic diversity of these families is highly heterogeneous. The individual genes that make up a family may vary in both number and rates of molecular evolution, and different individuals in the same species may not share the same genes. </p> <p> Our goal is to understand the mechanisms and functional consequences of immune gene evolution </p>
 								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
+									<li><a href="immuno.html" class="button">Learn More</a></li>
 								</ul>
 							</div>
 							<a href="#four" class="goto-next scrolly">Next</a>
