--- a/immuno.html
+++ b/immuno.html
@@ -48,15 +48,15 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Immunogenetics</h2>
-							<p>A comparative perspective on our immune systems</p>
+							<h2>Comparative Immunogenetics</h2>
+							<p>Understanding the molecular basis of our immune system</p>
 						</header>
 						<div class="row gtr-150">
 							<div class="col-8 col-12-medium">
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/IMG_2380.jpeg" alt="" /></a>
 										<h3>Clustered Gene Families</h3>
 										<p>A pervasive feature of the vertebrate immune system is the successive duplication of tandem genes. These duplication events have led to the existence of clustered gene families of immune receptors that display disproportionately high levels of genetic variation relative to surrounding regions. The existence of multiple, highly diverse immune receptor genes provides clear benefits against the threat of infectious diseases. However, these clusters often have different numbers of genes, and/or families of genes that are unidentifiable or nonfunctional between evolutionarily divergent model species.</p> 
 
@@ -67,11 +67,11 @@
 										<p>Referred to by Darwin as living fossils, both gar and bowfin are ancient fish lineages that do not possess a duplicated genome. Instead they contain a mix of genes that sometimes more closely resemble those in humans or chicken rather than fish! <p>Working closely with <a href='http://www4.ncsu.edu/~jayoder/'> Jeff Yoder </a> at the NC State Veterinary School a major aspect of our comparative immunogenetic work is empowered by investigating genes relevant to human immune function also shared by these species. Our goal is to understand the functional consequences of gene duplications in these clusters, and ultimately develop an understanding of how this genetic diversity contributes to organismal health and disease</p>
 										<h3>Current Research Initiatives</h3>
 										<ul>
-											<li>The diversification of innate immune receptors in vertebrates</li>
+											<li>The diversification vertebrate innate immune receptors</li>
 											<li>CD300s as a model of clustered gene family evolution</li>
 											<li>Assessing population-level immunogenetic variation</li>
 											<li>The immunome of Antarctic fishes</li>
-											<li>A comparative perspective of immune receptor diversity in marine fish</li>
+											<li>The role of ecology in shaping marine fish immune receptor diversity</li>
 										</ul>
 									</section>
 
@@ -81,22 +81,25 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
+											
 											<h3>Insights from Bowfin</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
+											<p>Our recent work on the bowfin genome led to a reclassification of antibodies for half of all living vertebrates, revealed a striking similarity of the MHC locus between these fishes and humans, and demonstrated the presence of numerous receptors thought to have evolved over a hundred million years later. We are now continuing similar work in other 'living fossil' fishes! </p>
 											<footer>
+												<a href="https://www.nature.com/articles/s41588-021-00914-y" class="image fit"><img src="images/Capefear7.jpg" alt="" /></a>
 												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
+													<li><a href="https://www.nature.com/articles/s41588-021-00914-y" class="button">Read the paper</a></li>
 												</ul>
+
 											</footer>
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-											<h3>Amet Lorem Tempus</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+											<h3>The Origins of Adaptive Immunity</h3>
+											<p> Vertebrate adaptive immunity relies on an extensive and highly diverse repertoire of tandem arrays of variable (V), diversity (D), and joining (J) gene segments that recombine to produce different immunoglobulin (Ig) and T cell receptor (TCR) genes. However, a model for the evolutionary relationships between extant non-recombining innate immune receptors and the V(D)J receptors of the jawed vertebrate adaptive immune system has only recently begun to come into focus. </p><p>We are working on several exciting projects that provide this evolutionary context and also recently published a review on this topic that we hope will serve as a catalyst for more comparative research on this topic</p>
 											<footer>
+												<a href="https://link.springer.com/content/pdf/10.1007/s00251-021-01232-7.pdf" class="image fit"><img src="images/NITRvsNK.png" alt="" /></a>
 												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
+													<li><a href="https://link.springer.com/content/pdf/10.1007/s00251-021-01232-7.pdf" class="button">Read the paper</a></li>
 												</ul>
 											</footer>
 										</section>
