--- a/publications.html
+++ b/publications.html
@@ -53,8 +53,8 @@
 
 						<!-- Content -->
 							<section id="content">
-								<a href="#" class="image fit"><img src="images/RedRocksCO_banner.jpg" height="200" alt="" /></a>
-								<h3>Preprints</h3>
+								
+								<h3><b>Preprints</b></h3>
 									<ul>
 											<li>Townsend, J. P., Lamb, A. D., Hassler, H. B., Sah, P., Nishio, A. A., Nguyen, C., Galvani, A. P., & Dornburg, A. (2022).
 													Projecting the seasonality of endemic COVID-19. In bioRxiv.
@@ -73,8 +73,8 @@
 
 											<li>Carlson, K.B., Wcisel, D.J, Ackerman,H.D., Romanet, J., Christiansen, E.F., Niemuth, J.N., Williams, C., Breen, M., Stoskopf, M., Dornburg, A, and Yoder, J.A., Transcriptome annotation reveals minimal immunogenetic diversity among Wyoming toads, Anaxyrus baxteri. Research Square; Submitted to Conservation Genetics<b><a href="https://assets.researchsquare.com/files/rs-1265947/v1/effd5c7e-592f-4170-9f1c-bc9b0dbfbb67.pdf?c=1644939558">PDF</a></b></li>
 									</ul>
-
-								<h3>Publications</h3>
+									
+								<h3><b>Publications</b></h3>
 									<h4>2022</h4>
 										<ul>
 											<li> Fisk, J. N., Mahal, A. R., Dornburg, A., Gaffney, S. G., Aneja, S., Contessa, J. N., Rimm, D., Yu, J. B.,
@@ -90,6 +90,7 @@
 												dramatically reduces species diversity in an Antarctic adaptive radiation. <i>Systematic Biology</i>.
 												<b><a href="/pubs/Parker2022.pdf">PDF</a></b></li>
 										</ul>
+										<span class="image fit"><img src="images/Antarctica.jpg" height="250" alt="" /></span>
 
 									<h4>2021</h4>
 										<ul>
