--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						</header>
 						<p> As we move into the 21st century, it is becoming apparent that learning about the past can critically aid us in facing emergent challenges to biodiversity. </p><p>Given the rapid pace of global change devloping this understanding now is fundamentally important if we want to accurately forecast how biodiversity will be impacted by factors ranging from species invasion, ocean acidification, development, and rising temperatures. </p> <p>Learn about our own work concerning the evolution of biodiversity and global change and how these relate to the findings from the research efforts of our friends and colleagues here!</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="macro.html" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
