--- a/macro.html
+++ b/macro.html
@@ -57,11 +57,14 @@
 								<!-- Content -->
 									<section id="content">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-										<h3>Dolore Amet Consequat</h3>
+										<h3>The Evolution of Marine Fishes</h3>
 										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
 										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-										<h3>Sed Magna Ornare</h3>
+										<h3>Life in the Antarctic</h3>
 										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
+										<h3>Life on Coral Reefs</h3>
+										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
+										<h3>Current Projects</h3>
 										<ul>
 											<li>Faucibus orci lobortis ac adipiscing integer.</li>
 											<li>Col accumsan arcu mi aliquet placerat.</li>
@@ -77,11 +80,12 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-											<h3>Magna Feugiat</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
+											<h3>Don't forget the kids</h3>
+											<p>Across the Tree of Life, most studies of phenotypic disparity and diversification have been restricted to adult organisms. However, many lineages have distinct ontogenetic phases that do not reflect the same traits as their adult forms. </p><p> Non-adult disparity patterns are particularly important to consider for coastal ray-finned fishes, which often have juvenile phases with distinct phenotypes. A new initiative in our lab is to integrate macroevolutionary work across life stages, thereby getting a more complete picture of what it takes for species to persist over time. </p> <p> We piloted this initiative in a recent preprint on triggerfishes, check it out! </p>
 											<footer>
+												<a href="https://www.biorxiv.org/content/10.1101/2022.01.11.475856v1" class="image fit"><img src="images/coral.jpg" alt="" /></a>
 												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
+													<li><a href="https://www.biorxiv.org/content/10.1101/2022.01.11.475856v1" class="button">Read the paper</a></li>
 												</ul>
 											</footer>
 										</section>
