--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<ul>
 								<li><a href="macro.html">Macroevolution</a></li>
 								<li><a href="phylo.html">Phylogenomics</a></li>
-								<li><a href="comp.html">Computational Epidemiology</a></li>
+								<li><a href="comp.html">Evolutionary Medicine</a></li>
 								<li><a href="immuno.html">Immunogenetics</a></li>
 							</ul>
 						</li>
@@ -100,7 +100,7 @@
 					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Computational Epidemiology</h2>
+							<h2>Evolutionary Medicine</h2>
 							<p>Some text here</p>
 						</header>
 						<p> Some more text here </p>
