--- a/phyinformrMain.html
+++ b/phyinformrMain.html
@@ -58,7 +58,7 @@
 								<p><span class="image left"><img src="images/InformeRlogo.jpg" height="250" alt="" /></span> This section covers the basics of installation and how to get site rates using IQTREE2. Also featured is a demonstration of how to import this external data and the dependencies PhyInformR utilizes.</p><p> Once you have imported your site rate file and your guide tree this section covers how to generate PI profiles as well as a discussion of how to interpret these curves</p>
 								<div class="col-6 col-12-xsmall">
 										<ul class="actions fit small">
-											<li><a href="#" class="button primary fit small">Go to Part 1</a></li>
+											<li><a href="phyinformrMain.html" class="button primary fit small">Go to Part 1</a></li>
 										</ul>
 									</div>
 								<p></p>
@@ -81,10 +81,10 @@
 								<p></p>
 								<br></br>
 								<h3>Download pdf </h3>
-								<p><a href="http://carolinafishes.github.io/images/PhyInformR.pdf" class="image left"><img src="images/PhyinformRCover.png" height="300"  alt=""></a> A pdf of this manual is available. Please note that some advanced features in the web instructions may be missing depending on our update schedule.</p>
+								<p><a href="https://github.com/carolinafishes/carolinafishes.github.io/tree/master/images/PhyInformR.pdf" class="image left"><img src="images/PhyinformRCover.png" height="300"  alt=""></a> A pdf of this manual is available. Please note that some advanced features in the web instructions may be missing depending on our update schedule.</p>
 								<div class="col-6 col-12-xsmall">
 										<ul class="actions fit small">
-											<li><a href="http://carolinafishes.github.io/images/PhyInformR.pdf" class="button primary fit small">Download pdf</a></li>
+											<li><a href="https://github.com/carolinafishes/carolinafishes.github.io/tree/master/images/PhyInformR.pdf" class="button primary fit small">Download pdf</a></li>
 										</ul>
 									</div>
 								<p></p>
