next year publications

--- a/publications.html
+++ b/publications.html
@@ -160,6 +160,15 @@
 										<span class="image fit"><img src="images/publicationsBanner4.jpg" height="300" alt="" /></span>
 										
 										<h4>2018</h4>
+										<ul>
+											<li>Near, T.J., MacGuigan, D., Parker, C.E., Jones, C., Struthers, C., Dorn- burg, A. Phylogenetic analysis of Antarctic notothenioids illuminates the utility of RADseq for resolving Cenozoic adaptive radiations.<i> Molecular Phylogenetics and Evolution</i> 129: 268—279<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg, A., Zhou, S., Townsend, J.P. Optimal rates for phylogenetic inference and experimental design in the era of genome-scale datasets. <i>Systematic Biology</i> 68: 145—156<b><a href="#"> PDF</a></b></li>
+											<li>Iglesias, T.L.*, Dornburg, A.*, Warren, D.L., Wainwright, P.C.,Schmitz, L. Economo, E.P. Eyes-Wide Shut: the impact of dim-light vision on neural investment in marine teleosts. <i>Journal of Evolutionary Biology</i> 31: 1082—1092(*co-first authors)<b><a href="#"> PDF</a></b></li>
+											<li>Dornburg, A., Warren, D., Zapfe, K. Morris, R., Lamb, A., Hogue, G. Lukas, L. Wang, R. Testing ontogenetic patterns of sexual size dimorphism against expectations of the expensive tissue hypothesis, an intra-specific example using Oyster Toadfish (Opsanus tau). <i>Ecology and Evolution</i> 8 (7):3609—3616<b><a href="#"> PDF</a></b></li>
+										</ul>
+
+										<span class="image fit"><img src="images/publicationsBanner5.jpg" height="300" alt="" /></span>
+										<h4>2017</h4>
 										<p>Under construction</p>
 
 										
