--- a/index.html
+++ b/index.html
@@ -150,17 +150,17 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<a href="https://evil49.github.io/"  class="icon solid alt major fa-flask"></a>
 									<h3><a href="https://evil49.github.io/"><b>Lab protocols</b></a></h3>
-									<p>For lab members, protocols and tutorials are here</p>
+									<p>This is mostly for lab members and links to lab protocols and tutorials</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Journeys</h3>
+									<p>Photos of various places, plants, and animals </p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<a href="https://evil49.github.io/writing.html" class="icon solid alt major fa-file"></a>
+									<h3><a href="https://evil49.github.io/writing.html">Manuscript preparation</a></h3>
+									<p>Links to writing tips and guides</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-lock"></span>
