--- a/index.html
+++ b/index.html
@@ -133,19 +133,19 @@
 				<section id="six" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>I like this section template, it will get content soon</h2>
+							<h2>Additional Content</h2>
 						</header>
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-chart-area"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Google scholar</h3>
+									<p>Follow our work and where it intersects with the work of others in the field</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Recent Papers</h3>
+									<p>Summaries of our latest papers along with links to pdfs or tutorials</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<a href="https://evil49.github.io/"  class="icon solid alt major fa-flask"></a>
@@ -164,8 +164,8 @@
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Members only</h3>
+									<p>Link to lab meeting schedule for lab members</p>
 								</section>
 							</div>
 						</div>
