--- a/macro.html
+++ b/macro.html
@@ -93,11 +93,11 @@
 										<hr />
 										<section>
 											<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-											<h3>Amet Lorem Tempus</h3>
+											<h3>It's all about the timing</h3>
 											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
+													<li><a href="#" class="button">Read the paper</a></li>
 												</ul>
 											</footer>
 										</section>
