--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-chart-area"></span>
 									<h3>Google scholar</h3>
-									<p>Follow our work and where it intersects with the work of others in the field</p>
+									<p>Follow our work and see where it intersects with the work of others</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-comment"></span>
