images and content

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 			<!-- Four -->
 				<section id="four" class="spotlight style2 right">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/main3.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Evolutionary Medicine</h2>
