--- a/macro.html
+++ b/macro.html
@@ -65,6 +65,7 @@
 										<span class="image fit"><img src="images/macro1.jpg" height="300" alt="" /></span>
 										<h3>Life on Coral Reefs</h3>
 										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
+										<span class="image fit"><img src="images/macro2.jpg" height="300" alt="" /></span>
 										<h3>Current Projects</h3>
 										<ul>
 											<li>Faucibus orci lobortis ac adipiscing integer.</li>
@@ -92,7 +93,7 @@
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="#" class="image fit"><img src="images/macro4.jpg" alt="" /></a>
 											<h3>It's all about the timing</h3>
 											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
 											<footer>
