--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							<h2>Evolutionary Medicine</h2>
 						</header>
 							<p>Evolutionary biology is often considered a historical discipline. However, leveraging the power of evolutionary biology allows us to better understand, prevent, or treat disease. Our work on the durability of the immune response to SARS-CoV-2 underscore its important role in informing decision-making, and provide a crucial stepping stone toward robust knowledge of our prospects of resistance to reinfection. </p>
-							<p> A major initiative in the lab is to continue work that integrates knowledge of pathogen and host diversity into a phylogenetic framework to provide critical insights that can aid our efforts to thwart existing and emerging diseases </p>
+							<p> A major initiative in the lab is to continue work that integrates knowledge of pathogen and host diversity into a phylogenetic framework to provide critical insights that can aid our efforts to thwart existing and emergent diseases </p>
 						
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
