--- a/macro.html
+++ b/macro.html
@@ -24,7 +24,7 @@
 						<li><a href="research.html">Research</a>
 							<ul>
 								<li><a href="macro.html">Macroevolution</a></li>
-								<li><a href="comp.html">Computational Epidemiology</a></li>
+								<li><a href="comp.html">Evolutionary Medicine</a></li>
 								<li><a href="phylo.html">Phylogenomics</a></li>
 								<li><a href="immuno.html">Immunogenetics</a></li>
 							</ul>
